syntax = "proto3";
package management;
import "management/upsert_role.proto";
import "management/delete_role.proto";
import "management/get_roles.proto";
import "management/create_scope.proto";
import "management/delete_scope.proto";
import "management/get_scopes.proto";
  
service AuthService {
	rpc UpsertRole(UpsertRoleRequest) returns (UpsertRoleResponse);
	rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);
	rpc GetRoles(GetRolesRequest) returns (GetRolesResponse);
 
	rpc CreateScope(CreateScopeRequest) returns (CreateScopeResponse);
	rpc DeleteScope(DeleteScopeRequest) returns (DeleteScopeResponse);
	rpc GetScopes(GetScopesRequest) returns (GetScopesResponse);
}
