syntax = "proto3";
package management;

message DeleteRoleRequest {
	 string id = 1;
	 string tenant_id = 2;
}

message DeleteRoleResponse {}
