syntax = "proto3";
package management;

message DeleteScopeRequest {
	string client_id = 1;
	string name = 2;
}

message DeleteScopeResponse {}
