syntax = "proto3";
package management;

message GetRolesRequest {
	string tenant_id = 1;
}

message GetRolesResponse {
	repeated Role roles = 1;
}


message Role {
	string id = 1;
	string name = 2;
	string description = 3;
	repeated string scopes = 4;
}
