syntax = "proto3";
package management;

message UpdateUserRequest {
	string tenant_id = 1;
	string id = 2;
	string login = 3;
	string email = 4;
	string display_name = 5;
	string password = 6;
	repeated string assigned_role_ids = 7;
	bool active = 8;
	int64 blocked_until = 9;
}

message UpdateUserResponse {}
